--- a/RaellShoes/Views/Administrador/Produtos.cshtml
+++ b/RaellShoes/Views/Administrador/Produtos.cshtml
@@ -421,7 +421,7 @@
 
                                         <div class="col-lg-12 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>URL Foto do Produto</span>
-                                            <input asp-for="Produto.URLFoto" class="form-control" id="url"
+                                            <input asp-for="Produto.URLFoto" class="form-control" id="url" type="file"
                                                    placeholder="Cole a URl da foto armazenada do produto" required>
                                             <div class="invalid-feedback">
                                                 *Campo obrigatório
