Ajuste URL Foto Produtos

--- a/RaellShoes/Views/Clientes/FiltroProdutos.cshtml
+++ b/RaellShoes/Views/Clientes/FiltroProdutos.cshtml
@@ -113,7 +113,7 @@
                                 <div class="col-lg-12 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                                     <div class="member">
                                         <div class="member-img">
-                                            <img src="~/assets/img/Produtos/@Html.DisplayFor(model => item.URLFoto)" class="img-fluid" alt="">
+                                            <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => item.URLFoto)" class="img-fluid" alt="">
 
                                         </div>
                                         <div class="member-info">
