--- a/RaellShoes/Views/Clientes/MeusPedidos.cshtml
+++ b/RaellShoes/Views/Clientes/MeusPedidos.cshtml
@@ -240,7 +240,7 @@
                                     <!--Produto -->
                                     <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                         <span></span>
-                                        <img src="~/assets/img/Produtos/@Html.DisplayFor(model => produto.URLFoto)"
+                                        <img src="~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => produto.URLFoto)"
                                              id="img-historico" />
                                     </div>
 
