--- a/RaellShoes/Views/Clientes/Troca.cshtml
+++ b/RaellShoes/Views/Clientes/Troca.cshtml
@@ -130,7 +130,7 @@
                             <!--Produto 1-->
                             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span></span>
-                                <img src='~/assets/img/Produtos/@item.Produto.URLFoto'
+                                <img src='~/assets/img/Produtos/URLFoto/@item.Produto.URLFoto'
                                      id="img-historico" />
                             </div>
 
