--- a/RaellShoes/Views/Administrador/DetalhesTroca.cshtml
+++ b/RaellShoes/Views/Administrador/DetalhesTroca.cshtml
@@ -151,7 +151,7 @@
                     <!--Produto 1-->
                     <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                         <span></span>
-                        <img src='~/assets/img/Produtos/@Html.DisplayFor(model => Model.Produto.URLFoto)'
+                        <img src='~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => Model.Produto.URLFoto)'
                              id="img-historico" />
                     </div>
 
