--- a/RaellShoes/Views/Administrador/DetalhesPedido.cshtml
+++ b/RaellShoes/Views/Administrador/DetalhesPedido.cshtml
@@ -163,7 +163,7 @@
                             <!--Produto 1-->
                             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span></span>
-                                <img src='~/assets/img/Produtos/@Html.DisplayFor(model => item.URLFoto)'
+                                <img src='~/assets/img/Produtos/URLFoto/@Html.DisplayFor(model => item.URLFoto)'
                                      id="img-historico" />
                             </div>
 
